[project]
name = "2cdm-paperii"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cosmosim",
    "h5py>=3.15.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pynbody>=2.4.1",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
cosmosim = { path = "../cosmoSim" }
